[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "condynsate"
version = "0.6.8"
description = "Simulates and visualizes articulated systems in real time"
readme = "README.md"
authors = [{ name = "Grayson Schaer", email = "gschaer2@illinois.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    "Natural Language :: English", 
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Scientific/Engineering :: Visualization"
]
keywords = [
    "dynamic",
    "control",
    "visualization",
    "simulation",
    "education",
    "pybullet",
    "meshcat",
]
dependencies = [
    "wheel",
    "matplotlib",
    "meshcat",
    "notebook",
    "numpy",
    "pybullet",
    "pynput",
    "sympy",
    "scipy",
    "pyside6",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/GrayKS3248/condynsate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
