[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "condynsate"
dynamic = ["version"]
description = "Simulates and visualizes articulated systems in real time"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = [
    "dynamic",
    "control",
    "visualization",
    "simulation",
    "education",
    "pybullet",
    "meshcat",
]
authors = [{ name = "Grayson Schaer", email = "gschaer2@illinois.edu" }]
maintainers = [{ name = "Grayson Schaer", email = "gschaer2@illinois.edu" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    "Natural Language :: English", 
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "matplotlib",
    "meshcat",
    "notebook",
    "numpy",
    "pybullet",
    "pynput",
    "pyside6",
    "scipy",
    "sympy",
]


[project.urls]
"Homepage" = "https://github.com/GrayKS3248/condynsate"
"Bug Reports" = "https://github.com/GrayKS3248/condynsate/issues"
"Source" = "https://github.com/GrayKS3248/condynsate"


[tool.setuptools.package-data]
"*" = ["*.stl", "*.obj", "*.png"]


[tool.setuptools.dynamic]
version = {attr = "condynsate.__version__"}


[tool.setuptools.packages.find]
where = ["src"]